Finish documentation for 2.0.2

--- a/src/main/java/com/github/dakusui/valid8j/pcond/core/printable/package-info.adoc
+++ b/src/main/java/com/github/dakusui/valid8j/pcond/core/printable/package-info.adoc
@@ -1,5 +1,7 @@
 A package that provides a mechanism to make functions and predicates (lambdas) printable.
 
+== the `printable` package
+
 Suppose that we have this code fragment.
 
 [source, java]
