--- a/src/main/java/com/github/dakusui/valid8j/pcond/core/refl/package-info.adoc
+++ b/src/main/java/com/github/dakusui/valid8j/pcond/core/refl/package-info.adoc
@@ -3,6 +3,7 @@ Offers a mechanism to invoke a method dynamically.
 The `pcond` has a capability to construct a function predicate that invokes method of a given name on a target object.
 
 [source, java]
+.`Example` of `refl` package
 ----
 public class Example {
   public void example() {
